tests/compile-fail/invalid_update_field.rs
#[derive(salsa::Update)]
struct S2<'a> {
    bad2: &'a str,
}

fn main() {}
